log/build_2022-05-26_14-23-24/OptiTrack/stdout_stderr.log
running egg_info
creating ../../build/OptiTrack/OptiTrack.egg-info
writing ../../build/OptiTrack/OptiTrack.egg-info/PKG-INFO
writing dependency_links to ../../build/OptiTrack/OptiTrack.egg-info/dependency_links.txt
writing entry points to ../../build/OptiTrack/OptiTrack.egg-info/entry_points.txt
writing requirements to ../../build/OptiTrack/OptiTrack.egg-info/requires.txt
writing top-level names to ../../build/OptiTrack/OptiTrack.egg-info/top_level.txt
writing manifest file '../../build/OptiTrack/OptiTrack.egg-info/SOURCES.txt'
reading manifest file '../../build/OptiTrack/OptiTrack.egg-info/SOURCES.txt'
writing manifest file '../../build/OptiTrack/OptiTrack.egg-info/SOURCES.txt'
running build
running build_py
creating /home/sycamore/Syca_ws/build/OptiTrack/build
creating /home/sycamore/Syca_ws/build/OptiTrack/build/lib
creating /home/sycamore/Syca_ws/build/OptiTrack/build/lib/OptiTrack
copying OptiTrack/OptiTrack_link.py -> /home/sycamore/Syca_ws/build/OptiTrack/build/lib/OptiTrack
copying OptiTrack/__init__.py -> /home/sycamore/Syca_ws/build/OptiTrack/build/lib/OptiTrack
running install
running install_lib
creating /home/sycamore/Syca_ws/install/lib/python3.8/site-packages/OptiTrack
copying /home/sycamore/Syca_ws/build/OptiTrack/build/lib/OptiTrack/OptiTrack_link.py -> /home/sycamore/Syca_ws/install/lib/python3.8/site-packages/OptiTrack
copying /home/sycamore/Syca_ws/build/OptiTrack/build/lib/OptiTrack/__init__.py -> /home/sycamore/Syca_ws/install/lib/python3.8/site-packages/OptiTrack
byte-compiling /home/sycamore/Syca_ws/install/lib/python3.8/site-packages/OptiTrack/OptiTrack_link.py to OptiTrack_link.cpython-38.pyc
  File "/home/sycamore/Syca_ws/install/lib/python3.8/site-packages/OptiTrack/OptiTrack_link.py", line 18
    self.subscription. = self.create_subscription(
                       ^
SyntaxError: invalid syntax

byte-compiling /home/sycamore/Syca_ws/install/lib/python3.8/site-packages/OptiTrack/__init__.py to __init__.cpython-38.pyc
running install_data
copying resource/OptiTrack -> /home/sycamore/Syca_ws/install/share/ament_index/resource_index/packages
copying package.xml -> /home/sycamore/Syca_ws/install/share/OptiTrack
running install_egg_info
Copying ../../build/OptiTrack/OptiTrack.egg-info to /home/sycamore/Syca_ws/install/lib/python3.8/site-packages/OptiTrack-0.0.0-py3.8.egg-info
running install_scripts
Installing get_optiPos script to /home/sycamore/Syca_ws/install/lib/OptiTrack
writing list of installed files to '/home/sycamore/Syca_ws/build/OptiTrack/install.log'
